--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <div class="container">
         <div class="jumbotron">
-            <p>抖音，记录他人美好生活！</p>
+            <p>Tải Video DouYin no LOGO</p>
         </div>
-        <input class="form-control" type="text" id="url" placeholder="请将APP里复制的视频链接粘贴到这里"><br>
-        <button type="submit" class="btn btn-success btn-lg btn-block" id="magic">点击还原！</button><br>
+        <input class="form-control" type="text" id="url" placeholder="Dán link copy được trên app vào đây và nhấn download"><br>
+        <button type="submit" class="btn btn-success btn-lg btn-block" id="magic">DOWNLOAD VIDEO</button><br>
         <div id="str"></div>
     </div>
     <script src="https://lib.baomitu.com/jquery/3.3.1/jquery.min.js"></script>
@@ -36,7 +36,7 @@
                     },
                     error: function (error) {
                         layer.closeAll('loading');
-                        layer.msg('出错了，请再试一下！');
+                        layer.msg('Đã xảy ra lỗi, vui lòng thử lại');
                     }
                 });
             });
