--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://lib.baomitu.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://lib.baomitu.com/bootstrap-table/1.12.1/bootstrap-table.min.css" rel="stylesheet">
-    <title>null</title>
+    <title>Download Douyin</title>
 </head>
 
 <body>
 
     <div class="container">
         <div class="jumbotron">
-            <p>Tải Video DouYin no LOGO</p>
+            <p>Tải Video DouYin no LOGO và MP3</p>
         </div>
         <input class="form-control" type="text" id="url" placeholder="Dán link copy được trên app vào đây và nhấn download"><br>
         <button type="submit" class="btn btn-success btn-lg btn-block" id="magic">DOWNLOAD VIDEO</button><br>
