--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <div class="container">
         <div class="jumbotron">
-            <p>Tải Video DouYin no LOGO và MP3</p>
+            <p>Tải Video DouYin không Logo Và Tải Mp3</p>
+             <p>Lưu ý copy link trên app:</p>
+              <p>Xóa hét chữ trung quốc chừa đường link lại</p>
+            <p>Link Mẫu : http://v.douyin.com/pVspwg/ nhớ có dấu / nhé</p>
         </div>
         <input class="form-control" type="text" id="url" placeholder="Dán link copy được trên app vào đây và nhấn download"><br>
         <button type="submit" class="btn btn-success btn-lg btn-block" id="magic">DOWNLOAD VIDEO</button><br>
