--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <div class="container">
         <div class="jumbotron">
             <p>Tải Video DouYin không Logo Và Tải Mp3</p>
-             <p>Lưu ý copy link trên app:</p>
-              <p>Xóa hét chữ trung quốc chừa đường link lại</p>
-            <p>Link Mẫu : http://v.douyin.com/pVspwg/ nhớ có dấu / nhé</p>
+             <p>****Lưu ý***</p>
+              <p>1. Copy xong Xóa hét chữ trung quốc chừa đường link lại</p>
+            <p>2.Link Mẫu : http://v.douyin.com/pVspwg/ nhớ có dấu / nhé</p>
+            <p>3.Sau khi nhấn download video xong sẽ hiện 2 ô màu xanh:</p>
+             <p>4.Ô số 1 là DOWNLOAD và số 2 là ô MP3</p>
+            <p></p>
         </div>
         <input class="form-control" type="text" id="url" placeholder="Dán link copy được trên app vào đây và nhấn download"><br>
         <button type="submit" class="btn btn-success btn-lg btn-block" id="magic">DOWNLOAD VIDEO</button><br>
